--- a/public/styles.css
+++ b/public/styles.css
@@ -1,12 +1,3 @@
-@font-face {
-    font-family: 'Recursive';
-    font-style: normal;
-    font-weight: 500;
-    font-display: swap;
-    src: url('/assets/fonts/recursive.woff2') format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
 @keyframes blinker {
     50% {
         color: #ffbf26;
@@ -25,7 +16,7 @@ body {
     overflow-x: hidden;
     overflow-y: hidden;
     background-color: #3d1714;
-    font-family: 'Recursive', sans-serif !important;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
 
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -223,10 +214,38 @@ p {
     position: absolute;
     top: 0;
     left: 0;
-    width: 400px;
+    width: 350px;
     padding: 12px;
     height: 100%;
-    background-color: #343333;
+    background: linear-gradient(rgb(42, 42, 42), rgb(32, 32, 32));
+}
+
+.build-menu-header {
+    height: 70px;
+    background: linear-gradient(rgb(24, 24, 24), rgb(12, 12, 12));
+    margin: -12px -12px 6px -12px;
+    padding: 7px;
+}
+
+.build-menu-logo {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.build-menu .app-btn-primary, .build-menu .app-btn-secondary {
+    background: linear-gradient(rgb(130, 130, 130), rgb(64, 64, 64));
+    box-shadow: 0 0 3px #000;
+    font-size: 1.5em;
+    height: 50px;
+    padding: 0px;
+    transition-duration: 0.125s;
+}
+
+.build-menu .app-btn-primary:hover, .build-menu .app-btn-secondary:hover {
+    background: linear-gradient(rgb(233, 109, 52), rgb(132, 59, 24));
+    box-shadow: 0 0 5px #000;
+    cursor: pointer;
+    font-size: 1.6em;
 }
 
 .build-icon {
@@ -249,4 +268,24 @@ p {
     font-size: 22px;
     text-shadow: 2px 2px #000;
     margin: auto;
+}
+
+.build-menu-footer {
+    background: #101010;
+    line-height: 2.5em;
+    padding: 4px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.build-menu-footer a {
+    color: #4a4a4a;
+    font-size: 2.25em;
+    margin: 0 2px;
+}
+
+.build-menu-footer a:hover {
+    color: white;
 }
