--- a/public/styles.css
+++ b/public/styles.css
@@ -289,3 +289,18 @@ p {
 .build-menu-footer a:hover {
     color: white;
 }
+
+.footer {
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 10px;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 350px;
+    padding: 0.5rem;
+    text-align: center;
+    z-index: 10;
+    background: black;
+}
