Added range display for maintenance tunnel and cranes. Added mobile message.

--- a/public/styles.css
+++ b/public/styles.css
@@ -15,7 +15,7 @@ body {
     text-align: center;
     overflow-x: hidden;
     overflow-y: hidden;
-    background-color: #3d1714;
+    background-color: #3f3f3f;
     font-family: 'FontAwesome', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
 
     -ms-overflow-style: none;
