--- a/public/styles.css
+++ b/public/styles.css
@@ -420,7 +420,7 @@ p {
     margin: 0;
 }
 
-.close-statistics-button, .fullscreen-button {
+.close-statistics-button, .footer-button {
     width: 30px;
     height: 30px;
     line-height: 25px;
