--- a/public/styles.css
+++ b/public/styles.css
@@ -523,8 +523,9 @@ p {
     overflow: auto;
 }
 
-.select-production:hover {
+.select-production:hover:not(.selected-production) {
     background: #131313;
+    border-color: white;
 }
 
 .select-production-input, .select-production-pointer, .select-production-output {
@@ -566,7 +567,7 @@ p {
 #delete-confirmation-dialog {
     width: 400px;
     height: 200px;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: #1a1a1a;
     position: fixed;
     top: 50%;
     left: 50%;
